# wind-stats

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  lint.yml  main.yml  release.yml
docs/: api.rst  conf.py  getting-started.rst  index.rst  requirements.txt  shelter_model.ipynb
docs/_static/: wind-stats.css
docs/user_guide/: index.rst  roughness_length.rst  wind_distribution.rst
tests/: gwa3_gwc_test_file.lib  test_geometry.py  test_gwa_reader.py  test_models.py  test_stats.py  test_utils.py  test_wind_stats.py
tests/data/: gwa3_gwc_j9mubhkw.lib
wind_stats/: __init__.py  __version__.py  constants.py  geometry.py  gwa_reader.py  models.py  obstacle.py  stats.py  units.py  utils.py
