[tool.poetry]
name = "wind-stats"
version = "0.1.0"
description = "Statistics tools to evaluate your wind energy projects"
authors = ["Jules Chéron <jules.cheron@gmail.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/jules-ch/wind-stats"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "wind",
    "energy",
    "renewables",
    "statistics"
]

[tool.poetry.dependencies]
python = "^3.6.1"
scipy = "^1.5.4"
numpy = "^1.19.4"
pandas = "^1.1.5"
xarray = "^0.16.2"
Pint = "^0.16.1"
typing-extensions = {version = "^3.7.4", python = "<3.8"}
importlib-metadata = {version = "^3.4.0", python = "<3.7"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
isort = "^5.6.4"
black = "20.8b1"
pytest-cov = "^2.10.1"
mypy = "^0.790"
flake8 = "^3.8.4"
httpretty = "^1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "wind_stats"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''