[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "wind-stats"
version = "0.3.0"
description = "Statistics tools to evaluate your wind energy projects"
maintainers = [{ name = "Jules Chéron", email = "jules.cheron@gmail.com" }]
license = "MIT"

readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["wind", "energy", "renewables", "statistics"]
requires-python = ">=3.8"

dependencies = ["numpy>=1.21", "scipy", "xarray", "pandas", "pint"]

[project.urls]
homepage = "https://github.com/jules-ch/wind-stats"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov", "httpretty>=1.0.5", "requests"]
dev = ["isort>=5.6.4", "black>=23.1.0", "mypy>=1.0.0", "ruff"]


[tool.hatch.build]
include = ["wind_stats/*"]

[tool.isort]
profile = "black"
known_first_party = "wind_stats"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    # "I",  # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
